Add SecretProvider for AWS. Properly implement Lambda handlers in native profile.